# f1_2021_telemetry

./: Cargo.toml  README.md
examples/: print_packets.rs
src/: error.rs  lib.rs  packet.rs  utils.rs
src/packet/: car_telemetry.rs  event.rs  header.rs  motion.rs
tests/: test_parsing.rs
tests/packet_samples/: car_telemetry.pkt  event_butn.pkt  event_fltp.pkt  event_ssta.pkt  generator.py  header.pkt  motion.pkt
