[package]
name = "f1_2021_telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
thiserror = "1.0.30"
tokio-util = { version = "0.7.1", features = ["codec", "net"] }
tokio-stream = "0.1.8"
tokio = "1.18.0"
enum-iterator = "0.7.0"